--- a/_pages/404.md
+++ b/_pages/404.md
@@ -2,7 +2,9 @@
 title: '404'
 permalink: /404.html
 ---
-Página não existe  
-Page not found
+Página não existe.  
+Page not found.
 
-![]({{ site.baseurl }}/media/images/404.jpg)
+<div style="width: 50%; margin: 0 auto;" markdown="1">
+  ![]({{ site.baseurl }}/media/icons/404.png)
+</div>
